cmake_minimum_required(VERSION 3.7)
project(Euler_Problems_in_cplusplus)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES main.cpp)
add_executable(Euler_Problems_in_cplusplus ${SOURCE_FILES})
add_executable(ID_001_Multiples_of_3_and_5 ID_001_Multiples_of_3_and_5.cpp)
add_executable(ID_002_Even_Fibonacci_numbers ID_002_Even_Fibonacci_numbers.cpp)
add_executable(ID_003_Largest_prime_factor ID_003_Largest_prime_factor.cpp)
add_executable(ID_004_Largest_palindrome_product ID_004_Largest_palindrome_product.cpp)
add_executable(ID_005_Smallest multiple "ID_005_Smallest multiple.cpp")
add_executable(ID_006_Sum_square_difference ID_006_Sum_square_difference.cpp)